# essential_extension_crosshair

./: README.md  main.js  package-lock.json  package.json
src/: app.js  index.html  settings.css  settings.html  settings.js  window_crosshair.js
src-tauri/: Cargo.toml  crosshair.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commander.rs  commands.rs  main.rs  mouse.rs  state.rs  storage.rs  tray.rs  window.rs
src-tauri/src/crosshair/: controller.rs  loader.rs  mod.rs  sender.rs
src/public/: crosshair_page.html
